Clients, Managers, team members - the avatar, user name and delete (X) need to be horizontally centre aligned fix

--- a/app/buddypress-components/rt-pm-componet/assets/scss/_pm-custom.scss
+++ b/app/buddypress-components/rt-pm-componet/assets/scss/_pm-custom.scss
@@ -212,7 +212,8 @@ textarea{
   }
 }
 img.avatar, img.wp-post-image{
-  max-width: none !important;
+  max-width: 32px !important;
+  max-height: 32px !important;
   padding: 4px !important;
   border: 1px solid #ddd !important;
   border-radius: 20px !important;
